syntax = "proto3";

package pb;

option go_package = "github.com/goriller/ginny-demo/api/proto;pb";

import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";
import "google/api/annotations.proto";

// 测试Say服务
service Say {

  // 测试HelloWorld
  rpc Hello(HelloReq) returns (HelloRes) {
    option (google.api.http) = {
      post : "/hello"
      body : "*"
    };
  }

  rpc Topic(TopicReq) returns (TopicRes) {
    option (google.api.http) = {
      post : "/topic"
      body : "*"
    };
  }
  rpc RpcCli(RpcCliReq) returns (RpcCliRes) {
    option (google.api.http) = {
      post : "/cli"
      body : "*"
    };
  }
}

// Hello 请求
message HelloReq {
  // 姓名
  string name = 1 [ (validate.rules).string = {max_bytes : 32} ];
}

//
message TopicReq {
  // 姓名
  string name = 1 [ (validate.rules).string = {max_bytes : 32} ];
}
//
message RpcCliReq {
  // 姓名
  string name = 1 [ (validate.rules).string = {max_bytes : 32} ];
}

// Hello 响应
message HelloRes {
  // 回复消息
  string msg = 1;
}
//
message TopicRes {
  // 回复消息
  string msg = 1;
}
//
message RpcCliRes {
  // 回复消息
  string msg = 1;
}
